--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -12,6 +12,6 @@
         <div class = "headertext" style="padding: 5px;color:white;" onclick='javascript:window.location.href=`index`;'>Home</div>
         <div class = "headertext" style="padding: 5px;margin-right:10px;margin-left:10px;color:white;" onclick='javascript:window.location.href=`analytics`;'>Analytics</div>
     </div>
-    <h1>{{ name }}</h1>
+    <h1>Tree-Plenish Analytics</h1>
 </body>
 </html>
