--- a/templates/school.html
+++ b/templates/school.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <div class="header">
-        <div class="tree-plenish" style="padding:5px;margin-right:1075px;color:white;background-color:#31a354;">Tree-Plenish.</div>
-        <div class = "headertext" style="padding: 5px;color:white;" onclick='javascript:window.location.href=`index`;'>Home</div>
-        <div class = "headertext" style="padding: 5px;margin-right:10px;margin-left:10px;color:white;" onclick='javascript:window.location.href=`analytics`;'>Analytics</div>
+        <div class="tree-plenish" style="padding:3px;margin-right:1075px;color:white;background-color:#31a354;">Tree-Plenish.</div>
+        <div class = "headertext" style="padding: 3px;color:white;" onclick='javascript:window.location.href=`index`;'>Home</div>
+        <div class = "headertext" style="padding: 3px;margin-right:10px;margin-left:10px;color:white;" onclick='javascript:window.location.href=`analytics`;'>Analytics</div>
     </div>
     <h1>{{ name }}</h1>
+    <div>{{ treeRequests }}</div>
+    <div>{{ treeGoal }}</div>
+    <div>{{ progress }}</div>
 </body>
 </html>
