--- a/static/style.css
+++ b/static/style.css
@@ -21,7 +21,7 @@
     border: 3px solid;
     border-color: #31a354;
 }
-#progress-container{
+/* #progress-container{
     background-color: rgb(192, 192, 192); 
     width: 80%; 
     border-radius: 15px; 
@@ -33,4 +33,4 @@
     font-size: 20px; 
     border-radius: 15px;
     width: 80%
-}
+} */
