added some grid structuring to main analytics page

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -13,5 +13,17 @@
         <div class = "headertext" style="padding: 3px;margin-right:10px;margin-left:10px;color:white;" onclick='javascript:window.location.href=`analytics`;'>Analytics</div>
     </div>
     <h1>Tree-Plenish Analytics</h1>
+    <div class="grid">
+        <div class="row" id="quick-stats">
+            <div id="pollutants">pollutants absorbed: </div>
+            <div id="paper">paper saved: </div>
+        </div>
+        <div class="row" id="big-stats1">
+            
+        </div>
+        <div class="row" id="big-stats2">
+            
+        </div>
+    </div>
 </body>
 </html>
