--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 .header{
     display: flex;
     padding: 15px;
-    background-color: #a1d99b;;
+    background-color: #a1d99b;
     font: 20px Arial, Helvetica, sans-serif;
     justify-content: flex-end;
     border-radius: 5px;
@@ -22,15 +22,4 @@
     border-color: #31a354;
 }
 
-.grid{
-    display:grid;
-}
-.row{
-    display:grid;
-}
-#quick-stats{
-    display:grid;
-    justify-content: center;
-    grid-template-columns: 1fr 1fr;
-}
 
