--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="../static/style.css"/> -->
-    <title>Document</title>
-    <style>
+{% extends 'base.html' %}
+{% block head %}
+    <!-- <style>
         .grid{
             display:grid;
             padding: 10px;
@@ -59,22 +54,52 @@
         .treeplenish{
             color:white;
         }
-    </style>
-</head>
-<body>
-    <div class="header">
-        <div class="treeplenish">Tree-Plenish.</div>
-        <div class="links">
-            <div class = "headertext"onclick='javascript:window.location.href=`index`;'>Home</div>
-            <div class = "headertext" onclick='javascript:window.location.href=`analytics`;'>Analytics</div>
+    </style> -->
+{% endblock %}
+{% block body %}
+    <div id="main-header"> 
+        <h1>Analytics</h1>
+    </div>
+    <div class="split">
+        <div class="half">
+            <h2>Pollutants Absorbed</h2>
+            <h2>##</h2>
+        </div>
+        <div class="half">
+            <h2>Paper Saved</h2>
+            <h2>##</h2> 
         </div>
     </div>
-    <h1>Analytics</h1>
-    <div class="grid">
+    <div class="cards">
+        <div class="card">
+            <h2>test</h2>
+            <p>############## ############  ################# ############### </p>
+        </div>
+        <div class="card">
+            <h2>test</h2>
+            <p>############## ############ ############### ################# ############### </p>
+        </div>
+        <div class="card">
+            <h2>test</h2>
+            <p>############## ############ ############### ################# ############### </p>
+        </div>
+        <div class="card">
+            <h2>test</h2>
+            <p>############## ############ ############### ################# ############### </p>
+        </div>
+        <div class="card">
+            <h2>test</h2>
+            <p>############## ############ ############### ################# ############### </p>
+        </div>
+        <div class="card">
+            <h2>test</h2>
+            <p>############## ############ ############### ################# ############### </p>
+        </div>
+    </div>
+    <!-- <div class="grid">
         <div class=row id="quick-stats">
             <div id="pollutants">pollutants absorbed: </div>
             <div id="paper">paper saved: </div>
-            
         </div>
         <div class="row" id="big-stats1">
             <div>test</div>
@@ -86,6 +111,5 @@
             <div>test</div>
             <div>test</div>
         </div>
-    </div>
-</body>
-</html>
+    </div> -->
+{% endblock %}
