--- a/templates/index.html
+++ b/templates/index.html
@@ -1,187 +1,126 @@
-<!DOCTYPE html> 
-<html>
-    <head>
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-        integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-        crossorigin=""/>
-        <!-- <link rel="stylesheet" href="../static/style.css"/> -->
-        <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-        crossorigin=""></script>
-        <script src='../static/states.js'></script>
-        <style>
-            #mapid {
-                height:800px;
-            }
-            .info {
-                padding: 6px 8px;
-                font: 14px/16px Helvetica, sans-serif;
-                background: white;
-                background: rgba(255,255,255,0.8);
-                box-shadow: 0 0 15px rgba(0,0,0,0.2);
-                border-radius: 5px;
-            }
-            .info h4 {
-                margin: 0 0 5px;
-                color: #777;
-            }
-            .schoolLink{
-                transition: text-decoration .5s;
-                cursor: pointer;
-            }
+{% extends 'base.html' %}
 
-            .schoolLink:hover{
-                text-decoration: underline;
-            }
-            .header{
-                display: grid; 
-                grid-template-columns: 4fr 1fr; 
-                padding: 15px;
-                background-color: #a1d99b;
-                font: 15px Arial, Helvetica, sans-serif;
-                /* justify-content: flex-end; */
-                border-radius: 5px;
-                /* position: relative; */
-                /* min-width:1000px; */
-}
-            .links{
-                display:grid;
-                grid-template-columns: 1fr 1fr;
-            }
-            .headertext{
-                transition: text-decoration .5s;
-                transition: text-color .5s;
-                cursor: pointer;
-                color:white;
-                /* margin-left: 5px; */
-            } 
-            .headertext:hover{
-                text-decoration: underline;
-                color: black;
-            }
-            .treeplenish{
-                color:white;
-            } 
-        </style>
-    </head>
-    <body>
-        <div class="header">
-            <div class="treeplenish">Tree-Plenish.</div>
-            <div class="links">
-                <div class = "headertext"onclick='javascript:window.location.href=`index`;'>Home</div>
-                <div class = "headertext" onclick='javascript:window.location.href=`analytics`;'>Analytics</div>
-            </div>
-        </div>
-        <div id="mapid"></div>
-        
-        <script>
-            //creating the map object
-            var theMap =  L.map('mapid').setView([42.3601, -71.0589], 5);
-            L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
-                attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-                maxZoom: 18,
-                id: 'mapbox/streets-v11',
-                tileSize: 512,
-                zoomOffset: -1,
-                accessToken: 'pk.eyJ1Ijoiamg0MzM3IiwiYSI6ImNra2FqcTQzYTAza2oydW5hajM1cHpsZm0ifQ.8ulGEQ6aT3YmGoHNqeV83Q'
-            }).addTo(theMap);
-            var TPmarker = L.marker([42.0335,-71.2191]).addTo(theMap);
-            TPmarker.bindPopup("<b>Tree-Plenish HQ</b>").openPopup();
-            //colors for the choropleth map
-            function getColor(d) {
-                return d > thirdQuartile ? '#31a354':
-                       d > firstQuartile  ? '#a1d99b':
-                                        '#e5f5e0';
-            }
-            function style(feature) {
-                return {
-                    fillColor: getColor(feature.properties.NUMSCHOOLS),
-                    weight: 2,
-                    opacity: 1,
-                    color: 'white',
-                    dashArray: '3',
-                    fillOpacity: 0.85
-                };
-            }
-            var geoJson = L.geoJson(statesData, {style: style, onEachFeature: onEachFeature}).addTo(theMap);
-
-            //this variable keeps track of which state is clicked on
-            var clicked;
-
-            //events for each state
-            function onEachFeature(feature, layer) {
-                layer.on({
-                    mouseover: highlightFeature,
-                    mouseout: resetHighlight,
-                    click: clickedFeature          
-                });
-
-            }
-            //hovering
-            function highlightFeature(e) {
-        
-                var layer = e.target;
-
-                layer.setStyle({
-                    weight: 5,
-                    color: '#a9a9a9',
-                    dashArray: '',
-                    fillOpacity: 0.7
-                });
-
-                if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
-                    layer.bringToFront();
-                }
-
-            }  
-            //off hover   
-            function resetHighlight(e) {
-                if(clicked!=e.target)
-                {
-                    geoJson.resetStyle(e.target);
-                }
-                
-                
-                return;
-            }
-
-            //info for each state
-            var info = L.control(); 
-            info.onAdd = function (map) {
-                this._div = L.DomUtil.create('div', 'info');
-                this.update();
-                return this._div;
+{% block head %}
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
+    <script src='../static/states.js'></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/map.css') }}">
+{% endblock %}
+{% block body %}
+    <div id="mapid"></div>
+{% endblock %}
+{% block scripts %}
+    <script>
+        //creating the map object
+        var theMap =  L.map('mapid').setView([42.3601, -71.0589], 5);
+        L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+            attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+            maxZoom: 18,
+            id: 'mapbox/streets-v11',
+            tileSize: 512,
+            zoomOffset: -1,
+            accessToken: 'pk.eyJ1Ijoiamg0MzM3IiwiYSI6ImNra2FqcTQzYTAza2oydW5hajM1cHpsZm0ifQ.8ulGEQ6aT3YmGoHNqeV83Q'
+        }).addTo(theMap);
+        var TPmarker = L.marker([42.0335,-71.2191]).addTo(theMap);
+        TPmarker.bindPopup("<b>Tree-Plenish HQ</b>").openPopup();
+        //colors for the choropleth map
+        function getColor(d) {
+            return d > thirdQuartile ? '#31a354':
+                    d > firstQuartile  ? '#a1d99b':
+                                    '#e5f5e0';
+        }
+        function style(feature) {
+            return {
+                fillColor: getColor(feature.properties.NUMSCHOOLS),
+                weight: 2,
+                opacity: 1,
+                color: 'white',
+                dashArray: '3',
+                fillOpacity: 0.85
             };
-            function buildString(school){
-                return( "goToSchool(" + "\'" + school + "\'" + ")");
-                
-            }
-            function buildHTML(schoolList){
-                var theSchools = "";
-                schoolList.forEach(school => theSchools = theSchools + "<div class=" + "\"" + "schoolLink" + "\"" + "onclick=" + "\"" + buildString(school) + "\"" + ">" + school + "</div><br>");
-                return theSchools;
-            }
-            info.update = function (props) {
-                this._div.innerHTML = '<h4>Schools:</h4>' +  (props ?
-                '<div>' + buildHTML(props.SCHOOLS) + '</div>'
-                : 'Click on a state');
-            };
-            info.addTo(theMap);
-            
-            //when a state is clicked
-            function clickedFeature(e){
-                clicked = e.target;
-                geoJson.resetStyle()
-                highlightFeature(e)
-                var layer = e.target;
-                info.update(layer.feature.properties)
+        }
+        var geoJson = L.geoJson(statesData, {style: style, onEachFeature: onEachFeature}).addTo(theMap);
 
+        //this variable keeps track of which state is clicked on
+        var clicked;
+
+        //events for each state
+        function onEachFeature(feature, layer) {
+            layer.on({
+                mouseover: highlightFeature,
+                mouseout: resetHighlight,
+                click: clickedFeature          
+            });
+
+        }
+        //hovering
+        function highlightFeature(e) {
+    
+            var layer = e.target;
+
+            layer.setStyle({
+                weight: 5,
+                color: '#a9a9a9',
+                dashArray: '',
+                fillOpacity: 0.7
+            });
+
+            if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
+                layer.bringToFront();
             }
-            function goToSchool(theSchool){
-                console.log(theSchool);
-                window.location.href = `school?school=${theSchool}`;
+
+        }  
+        //off hover   
+        function resetHighlight(e) {
+            if(clicked!=e.target)
+            {
+                geoJson.resetStyle(e.target);
             }
             
-        </script>
-    </body>
-</html>
+            
+            return;
+        }
+
+        //info for each state
+        var info = L.control(); 
+        info.onAdd = function (map) {
+            this._div = L.DomUtil.create('div', 'info');
+            this.update();
+            return this._div;
+        };
+        function buildString(school){
+            return( "goToSchool(" + "\'" + school + "\'" + ")");
+            
+        }
+        function buildHTML(schoolList){
+            var theSchools = "";
+            schoolList.forEach(school => theSchools = theSchools + "<div class=" + "\"" + "schoolLink" + "\"" + "onclick=" + "\"" + buildString(school) + "\"" + ">" + school + "</div><br>");
+            return theSchools;
+        }
+        info.update = function (props) {
+            this._div.innerHTML = '<h4>Schools:</h4>' +  (props ?
+            '<div>' + buildHTML(props.SCHOOLS) + '</div>'
+            : 'Click on a state');
+        };
+        info.addTo(theMap);
+        
+        //when a state is clicked
+        function clickedFeature(e){
+            clicked = e.target;
+            geoJson.resetStyle()
+            highlightFeature(e)
+            var layer = e.target;
+            info.update(layer.feature.properties)
+
+        }
+        function goToSchool(theSchool){
+            console.log(theSchool);
+            window.location.href = `school?school=${theSchool}`;
+        }
+        
+    </script>
+{% endblock %}
