--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -60,8 +60,8 @@
     <div id="main-header"> 
         <h1>Analytics</h1>
     </div>
-    <div class="split">
-        <div class="half">
+    <div class="split large-stats">
+        <div class="half" >
             <h2>Pollutants Absorbed</h2>
             <h2>##</h2>
         </div>
