Finished overall formatting

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -59,6 +59,8 @@
             color:white;
         }
     </style> -->
+    <title>Tree-Plenish Overall Analytics</title>
+
 {% endblock %}
 {% block body %}
     <div id="main-header"> 
@@ -102,14 +104,9 @@
     </div>
     <!-- <div class="grid">
         <div class=row id="quick-stats">
-<<<<<<< HEAD
             <div id="pollutants">pollutants absorbed: { data.pollutantsAbs } </div>
             <div id="paper">paper saved: { data.paperSaved }</div>
             
-=======
-            <div id="pollutants">pollutants absorbed: </div>
-            <div id="paper">paper saved: </div>
->>>>>>> 0edc989ceaa62bd6f3a3ed358f622399c7db33b8
         </div>
         <div class="row" id="big-stats1">
             <div>Donation Sizes
