--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
     crossorigin=""></script>
     <script src='../static/states.js'></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/map.css') }}">
+    <title>Tree-Plenish Analytics Dashboard</title>
+
 {% endblock %}
 {% block body %}
     <div id="mapid"></div>
